<resources>
    <string name="app_name">CentroFormacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duracion">Duración (semanas):</string>
    <string name="nivel_de_conocimiento_previo">Nivel de conocimiento previo:</string>
    <string name="otorga_beca">Otorga beca:</string>
    <string name="modalidad">Modalidad:</string>
    <string name="inicio">Inicio:</string>
    <string name="informacion_extra">Información extra</string>
</resources>